<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/llRoot"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/fugu_chat_bg"
              android:orientation="vertical">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/fugu_layout_toolbar_center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/fugu_action_divider_size"
        android:elevation="@dimen/fugu_elevation_4"
        android:background="@color/fugu_divider_light"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/fugu_elevation_4"
        android:visibility="visible"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.view.ViewPager
                android:id="@+id/vwPagerChannels"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:visibility="visible"/>

            <LinearLayout
                android:id="@+id/llInternet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/fugu_connected"
                android:gravity="center"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/fugu_margin_2"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    tools:text="Connected"/>
            </LinearLayout>


            <TextView
                android:id="@+id/tvNewConversation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvPoweredBy"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/fugu_margin_15"
                android:onClick="onClick"
                android:padding="@dimen/fugu_padding_15"
                android:text="@string/fugu_new_conversation"
                android:textColor="@android:color/white"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvNoInternet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:onClick="onClick"
                android:padding="@dimen/fugu_padding_20"
                android:text="@string/fugu_no_internet_connection_retry"
                android:textColor="@color/fugu_theme_color_primary"
                android:textSize="@dimen/fugu_text_size_large"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvPoweredBy"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/fugu_powered_by"
                android:visibility="gone"
                android:textColor="@color/fugu_text_color_primary"
                android:textSize="@dimen/fugu_text_size_intermediate"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnNewChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/fugu_margin_20"
                android:src="@drawable/ic_new_chat"
                android:clickable="true"
                android:focusable="true"
                app:elevation="@dimen/fugu_elevation_4"
                android:visibility="gone"
                app:backgroundTint="@color/fugu_new_chat_color"
                app:fabSize="normal"
                app:rippleColor="@android:color/white"/>

        </RelativeLayout>

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>