<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fugu_chat_bg"
    android:orientation="vertical"
    tools:context="com.fugu.activity.FuguChannelsActivity">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/fugu_agent_toolbar_center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tvPoweredBy"
        android:layout_below="@id/my_toolbar"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/retry_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_toolbar"
            android:background="@color/fugu_not_connected"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/btnRetry"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fugu_margin_30"
                android:gravity="center"
                android:textColor="@color/hippo_white"
                android:textSize="@dimen/fugu_text_size_normal" />

            <com.fugu.utils.loadingBox.ProgressWheel
                android:id="@+id/retry_loader"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/fugu_padding_8"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/tvUpdatingConvo"
                wheel:matProg_barColor="#ffffff"
                wheel:matProg_barWidth="2dp"
                wheel:matProg_fillRadius="false"
                wheel:matProg_progressIndeterminate="true" />

        </LinearLayout>

        <!--<LinearLayout
            android:id="@+id/llInternet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_toolbar"
            android:background="@color/fugu_connected"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/fugu_margin_2"
                android:text="Connected"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/fragment_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"/>


        <android.support.design.widget.TabLayout
            android:id="@+id/sliding_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed" />

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llInternet" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/hippo_bg_disabled"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvNewConversation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvPoweredBy"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/fugu_margin_15"
        android:onClick="onClick"
        android:padding="@dimen/fugu_padding_15"
        android:text="@string/fugu_new_conversation"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvNoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:onClick="onClick"
        android:padding="@dimen/fugu_padding_20"
        android:text="@string/fugu_no_internet_connection_retry"
        android:textColor="@color/fugu_theme_color_primary"
        android:textSize="@dimen/fugu_text_size_large"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvPoweredBy"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/fugu_powered_by"
        android:textColor="@color/fugu_text_color_primary"
        android:textSize="@dimen/fugu_text_size_intermediate" />
</RelativeLayout>
